# solYield

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
deployments/: README.md
deployments/devnet/: registry.example.json  registry.json
docs/: ARCHITECTURE.md  BOUNTY_100_POINT_PLAN.md  BOUNTY_READINESS_FIX_PLAN.md  BUILD_ADAPTER.md  DEPLOYMENT.md  DEVNET_REGISTRY_DEPLOYMENT.md  FINAL_BOUNTY_SELF_AUDIT.md  INTEGRATION_NOTES.md  MAINNET_FORK_TEST_RESULTS.md  QUALITY_CHECKLIST.md  SPEC.md
examples/: README.md  approve-adapter.ts  common.ts  current-value.ts  deposit.ts  register-adapter.ts  transfer-governance.ts  update-metadata.ts  withdraw.ts
programs/adapters/adapter-template/: Cargo.toml
programs/adapters/adapter-template/src/: lib.rs
programs/adapters/drift-insurance-fund/: Cargo.toml  README.md
programs/adapters/drift-insurance-fund/src/: constants.rs  lib.rs
programs/adapters/jupiter-lp/: Cargo.toml  README.md
programs/adapters/jupiter-lp/src/: constants.rs  lib.rs
programs/adapters/kamino-usdc/: Cargo.toml  README.md
programs/adapters/kamino-usdc/src/: constants.rs  lib.rs
programs/adapters/maple-syrup/: Cargo.toml  README.md
programs/adapters/maple-syrup/src/: constants.rs  lib.rs
programs/adapters/marginfi-usdc/: Cargo.toml  README.md
programs/adapters/marginfi-usdc/src/: constants.rs  lib.rs
programs/dispatcher/: Cargo.toml
programs/dispatcher/src/: lib.rs
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
scripts/: build-drift-v2161.sh  clone-mainnet-accounts.ts  deploy-devnet.ts  emit-fork-manifest.ts  probe-jupiter-keeper-gate.js  run-mainnet-fork-tests.ts  verify-devnet-registry.ts
sdk/ts/: README.md
sdk/ts/src/: index.ts
tests/integration/: adapter-compliance.test.ts  drift-insurance-fund-adapter.test.ts  jupiter-lp-adapter.test.ts  kamino-usdc-adapter.test.ts  maple-syrup-adapter.test.ts  marginfi-usdc-adapter.test.ts
tests/mainnet-fork/: drift-insurance-fund-mainnet-fork.test.ts  jupiter-lp-mainnet-fork.test.ts  kamino-usdc-mainnet-fork.test.ts  maple-syrup-mainnet-fork.test.ts  marginfi-usdc-mainnet-fork.test.ts
tests/mainnet-fork/manifests/: README.md  drift-insurance-fund.json  jupiter-lp.json  kamino-usdc.json  maple-syrup.json  marginfi-usdc.example.json  marginfi-usdc.json
tests/support/: drift-insurance-fund-flow.ts  jupiter-lp-flow.ts  kamino-usdc-flow.ts  maple-syrup-flow.ts  marginfi-usdc-flow.ts  validator-suite.ts
tests/unit/: phase1-workspace.ts  registry.ts  zz-dispatcher-routing.ts
