[workspace]
members = [
  "programs/dispatcher",
  "programs/registry",
  "programs/adapters/adapter-template",
  "programs/adapters/kamino-usdc",
  "programs/adapters/marginfi-usdc",
  "programs/adapters/jupiter-lp",
  "programs/adapters/maple-syrup",
  "programs/adapters/drift-insurance-fund",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"

[profile.release]
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
