[package]
name = "dispatcher"
version = "0.1.0"
description = "Core dispatcher program for the Solana Yield Adapter Standard."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispatcher"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "registry/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
registry = { path = "../registry", features = ["no-entrypoint"] }
