[package]
name = "drift-insurance-fund"
version = "0.1.0"
description = "Drift Insurance Fund request-remove adapter for the Solana Yield Adapter Standard."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_insurance_fund"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
