[package]
name = "jupiter-lp"
version = "0.1.0"
description = "Jupiter Perps JLP USDC adapter for the Solana Yield Adapter Standard."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_lp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
